Modern timz (#1)
* modern timz

Update to Java 20, update to new Prime Mover

serious clean up n such

* Ha!  Back in black

PerceptronSimulation back up and running.

* Add CI and build status badge

* Whoops.  need to publish jars before I can add this to a CI - lol